# memory

./: .excalidraw  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.postgres  READEME.md  README.md  add_dataset_to_pg.py  add_random_dataset_to_postgres.ipynb  create_record.py  db_migration.ipynb  docker-compose.yaml  download_odbc.sh  example_models.py  flashcards.db  flashcards_to_migrate.db  imporving_Readme.md  models.py  postgres.py  pyproject.toml  pyspark_test.ipynb  query_postgres.py  query_raw_data.py  requirements.txt  sql_setup.ipynb
.devcontainer/: Dockerfile.dev  devcontainer.json
backend/: add_tsql_db.py  alembic.ini  app.py  config.py  crud.py  database.py  load_env_config.py  logging_config.py  manual_check_db.py  manual_db_interaction.py  migration.py  models.py  run.py  sync.py  test.py
backend/code_completion/: check_code.py  creating_training.ipynb
backend/code_execution/: CodeCheck.py  check_code.py  multi_choice_problem_gen.py
backend/db/: card_model.py  cards.py  code_completion.py  db_helpers.py  manage.py  manual_add_to_db.py  migration.json  multi_choice_card_creation.ipynb  multi_choice_model.py  notes.py  problem_model.py  problems.py  review_model.py  sync.py
backend/dbs/: postgres_connection.py  postgres_upload_csv.py  tsql_connection.py  tsql_upload_csv.py
backend/manual/: add_old_data.py  manual_db_interaction.py  manual_tsql_interaction.py  manually_populate_due_date.py
backend/migrations/: env.py
backend/routes/: card_routes.py  code_routes.py  problem_routes.py  review_routes.py  save_problem_routes.py
backend/scheduling/: scheduling_utils.py  sm2_algorithm.py
backend/sqlserver/: query.py
backend/tests/: conftest.py  (+1 more)
docs/: .excalidraw  alembic.md  docker.md  logbook.md  memory_db.drawio  notes.md  notes_postgres_migration.md  planning.md  sqlalchemy.md
frontend/: .env  .env.production  .prettierrc  babel.config.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
scripts/: build.sh  download_spark.sh
static/: index.html
(+47 files in other folders)
